tenants/jh-project-shared/network-policies/allow-ingress-router.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-router
  namespace: jh-project-shared
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          policy-group.network.openshift.io/ingress: ""
    ports:
    - port: 9000
      protocol: TCP
    - port: 9001
      protocol: TCP
  podSelector:
    matchLabels:
      app: rustfs
  policyTypes:
  - Ingress
